{
  "version": 4,
  "terraform_version": "1.11.4",
  "serial": 104,
  "lineage": "b7681e28-b9c0-3e19-a5a2-db9e8a635c0c",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip_ec2_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ae9f35062ae70788",
            "arn": "arn:aws:ec2:ap-northeast-1:495264909330:elastic-ip/eipalloc-0ae9f35062ae70788",
            "association_id": "eipassoc-0ff94d88b6e5fc77d",
            "domain": "vpc",
            "id": "eipalloc-0ae9f35062ae70788",
            "instance": "i-0ae288ab6e4fd737f",
            "network_border_group": "ap-northeast-1",
            "network_interface": "eni-0a32631b35994eb27",
            "private_dns": "ip-10-0-2-233.ap-northeast-1.compute.internal",
            "private_ip": "10.0.2.233",
            "public_dns": "ec2-176-32-93-155.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "176.32.93.155",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "team06-eip-ec2-1",
              "Team": "devcos5-team06"
            },
            "tags_all": {
              "Name": "team06-eip-ec2-1",
              "Team": "devcos5-team06"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c1638aa346a43fe8",
            "arn": "arn:aws:ec2:ap-northeast-1:495264909330:instance/i-0ae288ab6e4fd737f",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "team06-instance-profile-1",
            "id": "i-0ae288ab6e4fd737f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0a32631b35994eb27",
            "private_dns": "ip-10-0-2-233.ap-northeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.233",
            "public_ip": "54.238.174.214",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0e5ff2582fb3e357b",
                "volume_size": 12,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05e226b04ae0ae36b",
            "tags": {
              "Name": "team06-ec2-1",
              "Team": "devcos5-team06"
            },
            "tags_all": {
              "Name": "team06-ec2-1",
              "Team": "devcos5-team06"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-01348fb69a054d7fa"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.instance_profile_01",
            "aws_iam_role.ec2_role-01",
            "aws_security_group.nginx-sg",
            "aws_subnet.subnet-02",
            "aws_vpc.vpc-01",
            "data.aws_ami.latest_amazon_linux"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c1638aa346a43fe8",
            "arn": "arn:aws:ec2:ap-northeast-1:495264909330:instance/i-0fd0a753e1ac05ded",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "team06-instance-profile-1",
            "id": "i-0fd0a753e1ac05ded",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-082963d14fad885ff",
            "private_dns": "ip-10-0-1-24.ap-northeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.24",
            "public_ip": "57.180.242.52",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-03e00426010f4d392",
                "volume_size": 12,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-046d29dc840f562d5",
            "tags": {
              "Name": "team06-ec2-2",
              "Team": "devcos5-team06"
            },
            "tags_all": {
              "Name": "team06-ec2-2",
              "Team": "devcos5-team06"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-01348fb69a054d7fa"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.instance_profile_01",
            "aws_iam_role.ec2_role-01",
            "aws_security_group.nginx-sg",
            "aws_subnet.subnet-01",
            "aws_vpc.vpc-01",
            "data.aws_ami.latest_amazon_linux"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw-01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:495264909330:internet-gateway/igw-037bd4618bfe3ef0c",
            "id": "igw-037bd4618bfe3ef0c",
            "owner_id": "495264909330",
            "tags": {
              "Name": "team06-igw-01",
              "Team": "devcos5-team06"
            },
            "tags_all": {
              "Name": "team06-igw-01",
              "Team": "devcos5-team06"
            },
            "vpc_id": "vpc-02655aa0ff83870e2"
          },
          "dependencies": [
            "aws_vpc.vpc-01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt-01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:495264909330:route-table/rtb-071956ad18cec11ec",
            "id": "rtb-071956ad18cec11ec",
            "owner_id": "495264909330",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-037bd4618bfe3ef0c",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "team06-rt-1",
              "Team": "devcos5-team06"
            },
            "tags_all": {
              "Name": "team06-rt-1",
              "Team": "devcos5-team06"
            },
            "timeouts": null,
            "vpc_id": "vpc-02655aa0ff83870e2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw-01",
            "aws_vpc.vpc-01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "association-01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01a71df1a17ffa9b8",
            "route_table_id": "rtb-071956ad18cec11ec",
            "subnet_id": "subnet-046d29dc840f562d5"
          },
          "dependencies": [
            "aws_internet_gateway.igw-01",
            "aws_route_table.rt-01",
            "aws_subnet.subnet-01",
            "aws_vpc.vpc-01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "association_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05a90de111a08e268",
            "route_table_id": "rtb-071956ad18cec11ec",
            "subnet_id": "subnet-05e226b04ae0ae36b"
          },
          "dependencies": [
            "aws_internet_gateway.igw-01",
            "aws_route_table.rt-01",
            "aws_subnet.subnet-02",
            "aws_vpc.vpc-01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "nginx-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:495264909330:security-group/sg-01348fb69a054d7fa",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01348fb69a054d7fa",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "DB",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Grafana",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "NPM Admin UI Port 81",
                "from_port": 81,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 81
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Prometheus",
                "from_port": 9090,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9090
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Redis Exporter",
                "from_port": 9121,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9121
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Redis",
                "from_port": 6379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 6379
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Spring Boot",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Spring Boot2",
                "from_port": 8081,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8081
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "haproxy",
                "from_port": 8090,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8090
              }
            ],
            "name": "nginx-proxy-sg",
            "name_prefix": "",
            "owner_id": "495264909330",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "team06-nginx-proxy-sg",
              "Team": "devcos5-team06"
            },
            "tags_all": {
              "Name": "team06-nginx-proxy-sg",
              "Team": "devcos5-team06"
            },
            "timeouts": null,
            "vpc_id": "vpc-02655aa0ff83870e2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc-01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet-01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:495264909330:subnet/subnet-046d29dc840f562d5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-046d29dc840f562d5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "495264909330",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "team06-subnet-01",
              "Team": "devcos5-team06"
            },
            "tags_all": {
              "Name": "team06-subnet-01",
              "Team": "devcos5-team06"
            },
            "vpc_id": "vpc-02655aa0ff83870e2"
          },
          "dependencies": [
            "aws_vpc.vpc-01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet-02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:495264909330:subnet/subnet-05e226b04ae0ae36b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05e226b04ae0ae36b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "495264909330",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "team06-subnet-02",
              "Team": "devcos5-team06"
            },
            "tags_all": {
              "Name": "team06-subnet-02",
              "Team": "devcos5-team06"
            },
            "vpc_id": "vpc-02655aa0ff83870e2"
          },
          "dependencies": [
            "aws_vpc.vpc-01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc-01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:495264909330:vpc/vpc-02655aa0ff83870e2",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-06daba9c7e843f5ab",
            "default_route_table_id": "rtb-064044ae15c0997fa",
            "default_security_group_id": "sg-0cc77fc6619152156",
            "dhcp_options_id": "dopt-04b4308b0efe84b58",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-02655aa0ff83870e2",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-064044ae15c0997fa",
            "owner_id": "495264909330",
            "tags": {
              "Name": "team06-vpc-01",
              "Team": "devcos5-team06"
            },
            "tags_all": {
              "Name": "team06-vpc-01",
              "Team": "devcos5-team06"
            }
          }
        }
      ]
    }
  ]
}